Desarrollo de seguridad dentro del sistemas y manejo por rol